# eh2002-schnitzeljagd

./: .cvsignore  Makefile  TODO  cvs-reroot  diary.pl  flame.txt  gettroll.php  getvalue.php  heise-forum.bz2  httpd.conf  ircshell.c  namen  namen.sh  names.txt  newstroll.pl  p2p.c  polizeisystem.pl  polsys.pl  postnews.pl  schnitzeljagd  status  stunnel
config/: base  nameserver
config/polizei/: brisantes-material.txt  dateien-im-uml.txt  device  ermittlungen.txt  ip  pack-umlfiles
config/polizei/bullencode/: Makefile  blubber.php  bulld-exploit  bulld.c  bullsafe.c  polsys.h  run-bulld  safe.c
config/polizei/news/groups/: info  p2p
config/polizei/polsys/: portname
config/polizei/postings/opensource/: message  subject
config/polizei/www/: adminemail  projects-root
config/polizei/www/root/: index.php
config/polizei/www/root/dev/: .htpasswd  bulld.c  index.html
config/prison/: device  ip
config/prison/p2p/: messages  target-addr
config/prison/postings/geständnis/: message  subject
config/sekte/: device  fingerbanner  ip
config/sekte/irc/: ircop-password  port
config/sekte/sshtunnel/: id_dsa  id_dsa.pub
config/sekte/stunnel/: private-key
config/spert/: device  helpmail  ip
config/spert/diary/entries/: 1  2  3
config/spert/www/: adminemail  cms-root  cms-user
config/spert/www/root/: fick  index.html
config/spert/www/root/cms/: .htpasswd  index.html
config/spert/www/root/cms/data/: index.html  pizza.txt  scheduler.txt  schwarzewelt.txt  spiegel.txt  stadt.txt
config/spert/www/root/cms/run/: cms.foo  index.html  index.php  menu.html  unten.html
doc/: raetsel.txt
init/: diary  httpd  irc  moo  network  newsserver  p2p  polsys  uml  uml-redir
irc/: anbeter-irc.pl  ircd.conf
irc/bobot/: anbeter.sh  anbeternamen.txt  guru.sh
irc/bobot/anbeter/: bot.autoexec  bot.close.conf  bot.conf  bot.conf.orig  bot.fcntl.conf  bot.fork.conf  bot.free.conf  bot.ioctl.conf  bot.kill.conf  bot.malloc.conf  bot.open.conf  bot.syslog.conf  bot.users  bot.write.conf
irc/bobot/anbeter/scripts/: anbeter
irc/bobot/guru/: bot.autoexec  bot.conf  bot.help  bot.init
irc/bobot/guru/scripts/: guru
logs/: .cvsignore
mail/: helpmail.pl  hilfemail1  hilfemail2  iplist
moo/: Codekammer  FefeKammer  Gang  Gefaengniseingang  Gefaengnissbuero  Geheimgang  Geheimgang2  Introduction  Kellergang  Klo  MCPKammer  Rechnerraum  SchemeKammer  TrollKammer  WookieKammer
newsserver/: noffle.conf
newsserver/noffle-1.0.1/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs  noffle.conf.example
newsserver/noffle-1.0.1/docs/: FAQ  INTERNALS  Makefile  Makefile.am  Makefile.in  NOTES  noffle.1  noffle.conf.5  noffle.lsm
newsserver/noffle-1.0.1/src/: Makefile  Makefile.am  Makefile.in  client.c  client.h  common.h  configfile.c  configfile.h  content.c  content.h  control.c  control.h  database.c  database.h  dynamicstring.c  dynamicstring.h  fetch.c  fetch.h  fetchlist.c  fetchlist.h  group.c  group.h  itemlist.c  itemlist.h  lock.c  lock.h  log.c  log.h  noffle  noffle.c  online.c  online.h  outgoing.c  outgoing.h  over.c  over.h  portable.h  post.c  post.h  protocol.c  (+11 more)
newsserver/ucspi-tcp-0.88/: addcr  argv0  auto-str  chkshsgr  delcr  fixcrio  install  instcheck  mconnect-io  rblsmtpd  recordio  systype  tcpclient  tcprules  tcprulescheck  tcpserver
scripts/: generate-apache  generate-diary
uml/: .cvsignore  clean.bz2  linux  run-uml  uml_net
